Slides 05: Minor changes

--- a/teoricas/teorica_05/src/direct_linear_transform.tex
+++ b/teoricas/teorica_05/src/direct_linear_transform.tex
@@ -735,7 +735,7 @@ Implica
 
 \begin{frame}{Summary}
     \begin{itemize}
-        \item Direct Linear Transforms estimates the \textbf{intrinsic} ($\intrinsicMatrix$) and \textbf{extrinsic} ($R, \translation$) parameters of a camera.
+        \item Direct Linear Transforms estimates the \textbf{intrinsic} ($\intrinsicMatrix$) and \textbf{extrinsic} ($\rotation, \translation$) parameters of a camera.
         \item Computes the parameters for the \textbf{mapping of the uncalibrated camera}.
         \item Requires at least \textbf{6 known control points in 3D}.
         \item \textbf{Direct solution} (no initial guess needed).
