Slides 05: Add block matching images

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -1034,7 +1034,7 @@
         }\\
         \subfloat[]
         {
-            \includegraphics[width=0.7\columnwidth]{./images/camera/depth_disparity_equation.pdf}
+            \includegraphics[width=0.7\columnwidth]{./images/depth_disparity_equation.pdf}
         }
     \end{figure}
     
@@ -1056,8 +1056,15 @@
 
 \begin{frame}
     \frametitle{Cámara estéreo}
-    \TODO{Agregar imagenes de template matching para cálculo de disparidad.}
-    \url{https://youtu.be/hUVyDabn1Mg}
+    \note{https://youtu.be/hUVyDabn1Mg}
+    \begin{center}
+        \only<1>{\includegraphics[width=\textwidth]{images/block_matching_disparity_1.pdf}}
+        \only<2>{\includegraphics[width=\textwidth]{images/block_matching_disparity_2.pdf}}
+        \only<3>{\includegraphics[width=\textwidth]{images/block_matching_disparity_3.pdf}}
+        \only<4>{\includegraphics[width=\textwidth]{images/block_matching_disparity_4.pdf}}
+        \only<5>{\includegraphics[width=\textwidth]{images/block_matching_disparity_5.pdf}}
+    \end{center}
+
 \end{frame}
 
 
