Slides 05: Add some notes

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -1065,12 +1065,18 @@
         \only<3>{\includegraphics[width=\textwidth]{images/block_matching_disparity_3.pdf}}
         
         \only<4>{\includegraphics[width=\textwidth]{images/block_matching_disparity_4.pdf}}
-        
+
         \only<5>{\includegraphics[width=\textwidth]{images/block_matching_disparity_5.pdf}}
     \end{center}
 
 \end{frame}
 
+\begin{frame}
+    \frametitle{Cámara estéreo}
+    \note{https://youtu.be/hUVyDabn1Mg}
+    \TODO{continuar con  el resto de las slides de block matching}
+
+\end{frame}
 
 \begin{frame}
     \frametitle{KITTI: error de reconstrucción}
@@ -1293,6 +1299,14 @@
     \end{figure}
     
 \end{frame}
+
+\begin{frame}
+    \frametitle{Tipos de transformaciones 2D}
+
+    \TODO{mejorar esta slides con https://rpg.ifi.uzh.ch/docs/teaching/2020/11_tracking.pdf}
+    
+\end{frame}
+
 
 \begin{frame}
     \frametitle{Tipos de transformaciones 3D}
