Slides 05: Minor change

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -1303,7 +1303,7 @@
 \begin{frame}
     \frametitle{Tipos de transformaciones 2D}
 
-    \TODO{mejorar esta slides con https://rpg.ifi.uzh.ch/docs/teaching/2020/11_tracking.pdf}
+    \TODO{mejorar esta slides con \url{https://rpg.ifi.uzh.ch/docs/teaching/2020/11_tracking.pdf}}
     
 \end{frame}
 
