Slides 05: Minor change

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -912,6 +912,8 @@
 \begin{frame}
     \frametitle{Matríz Esencial}
 
+    Adaptar la imagen de arriba y hacer layouts para las slides.
+
     %\TODO{Derivación de matriz esencial: \url{https://cave.cs.columbia.edu/Statics/monographs/Uncalibrated%20Stereo\%20FPCV-4-2.pdf}}
 
 \end{frame}
