Slides 05: Add optical_flow_velocity_vectors images

--- a/teoricas/teorica_05/src/optical_flow.tex
+++ b/teoricas/teorica_05/src/optical_flow.tex
@@ -71,13 +71,19 @@
 
 \begin{frame}
   \frametitle{Optical Flow}
-Motion of brightness patterns in the image.
 
-Ideally: Optical Flow = Motion Field.
+  \begin{itemize}
+    \item Motion of brightness patterns in the image.
+  \end{itemize}
 
-\vspace{0.5cm}
-\centering
-% \includegraphics[width=0.6\textwidth]{placeholder-slide6.png}
+  \begin{center}
+    \only<1>{\includegraphics[width=0.9\columnwidth]{./images/optical_flow/optical_flow_velocity_vectors_1.pdf}}
+    
+    \only<2>{\includegraphics[width=0.9\columnwidth]{./images/optical_flow/optical_flow_velocity_vectors_2.pdf}}
+
+    Ideally: Optical Flow = Motion Field.
+  \end{center}
+
 \end{frame}
 
 % Slide 4
@@ -104,17 +110,6 @@ Ideally: Optical Flow = Motion Field.
 
 \end{frame}
 
-% Slide 3
-\begin{frame}
-  \frametitle{Optical Flow}
-Motion of brightness patterns in the image.
-
-Ideally: Optical Flow = Motion Field.
-
-\vspace{0.5cm}
-\centering
-% \includegraphics[width=0.6\textwidth]{placeholder-slide6.png}
-\end{frame}
 
 % Slide 4
 \begin{frame}
