Slides 05: minor changes

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -9,7 +9,6 @@
     
 \end{frame}
 
-
 \begin{frame}
     \frametitle{Detección de Keypoints}
     
@@ -901,9 +900,9 @@
         \item La restricción epipolar codifica que $\imagePoint_{r}$ debe estar ubicado sobre la linea epipolar en la imagen derecha.
     \end{itemize}
 
-    \begin{figure}
+    \begin{center}
         \includegraphics[width=0.4\textwidth]{./images/epipolar_geometry.pdf}
-    \end{figure}
+    \end{center}
 
     La línea epipolar permite que restrinjamos la búsqueda de correspondencias visuales entre dos cámaras.
 
@@ -912,9 +911,13 @@
 \begin{frame}
     \frametitle{Matríz Esencial}
 
-    Adaptar la imagen de arriba y hacer layouts para las slides.
+    \TODO{Adaptar la imagen de arriba y hacer layouts para las slides.}
 
     %\TODO{Derivación de matriz esencial: \url{https://cave.cs.columbia.edu/Statics/monographs/Uncalibrated%20Stereo\%20FPCV-4-2.pdf}}
+
+    \begin{center}
+        \includegraphics[width=0.4\textwidth]{./images/epipolar_geometry.pdf}
+    \end{center}
 
 \end{frame}
 
