--- a/teoricas/teorica_05/src/optical_flow.tex
+++ b/teoricas/teorica_05/src/optical_flow.tex
@@ -78,7 +78,7 @@
 
   \begin{center}
     \only<1>{\includegraphics[width=0.9\columnwidth]{./images/optical_flow/optical_flow_velocity_vectors_1.pdf}}
-    
+
     \only<2>{\includegraphics[width=0.9\columnwidth]{./images/optical_flow/optical_flow_velocity_vectors_2.pdf}}
 
     Ideally: Optical Flow = Motion Field.
@@ -773,57 +773,46 @@
 % Slide 12
 \begin{frame}
   \frametitle{Large Motion: Problem}
-Taylor approximation invalid when displacements are large.
+  Taylor approximation invalid when displacements are large.
 
-\vspace{0.5cm}
-\centering
-% \includegraphics[width=0.6\textwidth]{placeholder-slide34.png}
+  \TODO{Agregar slides de coarse to fine from Optical Flow FPCV-4-3}
+
 \end{frame}
 
 % Slide 13
 \begin{frame}
   \frametitle{Coarse-to-Fine Estimation}
-Use resolution pyramid:
-\begin{itemize}
-  \item Compute flow at low resolution.
-  \item Warp and refine at higher resolutions.
-  \item Repeat until full resolution.
-\end{itemize}
+  Use resolution pyramid:
+  \begin{itemize}
+    \item Compute flow at low resolution.
+    \item Warp and refine at higher resolutions.
+    \item Repeat until full resolution.
+  \end{itemize}
 
-\vspace{0.5cm}
-\centering
-% \includegraphics[width=0.6\textwidth]{placeholder-slide36.png}
 \end{frame}
 
 % Slide 14
 \begin{frame}
   \frametitle{Alternative Approach: Template Matching}
-\begin{itemize}
-  \item Use template window from one frame.
-  \item Search for best match in next frame.
-  \item Difference gives optical flow.
-  \item Slow and can produce mismatches.
-\end{itemize}
+  \begin{itemize}
+    \item Use template window from one frame.
+    \item Search for best match in next frame.
+    \item Difference gives optical flow.
+    \item Slow and can produce mismatches.
+  \end{itemize}
 
-\vspace{0.5cm}
-\centering
-% \includegraphics[width=0.6\textwidth]{placeholder-slide41.png}
 \end{frame}
 
 % Slide 15
 \begin{frame}
   \frametitle{Applications of Optical Flow}
-\begin{itemize}
-  \item Optical mouse: motion tracking.
-  \item Traffic monitoring: estimate vehicle speed.
-  \item Video retiming: slow motion.
-  \item Stabilization: remove camera shake.
-  \item Face tracking: expressions, blinking.
-\end{itemize}
-
-\vspace{0.5cm}
-\centering
-% \includegraphics[width=0.6\textwidth]{placeholder-slide47.png}
+  \begin{itemize}
+    \item Optical mouse: motion tracking.
+    \item Traffic monitoring: estimate vehicle speed.
+    \item Video retiming: slow motion.
+    \item Stabilization: remove camera shake.
+    \item Face tracking: expressions, blinking.
+  \end{itemize}
 \end{frame}
 
 % References
