--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -921,6 +921,288 @@
 
 \end{frame}
 
+% --- Slide 1: Epipolar Constraint (Geometric Basis) ---
+\begin{frame}
+    \frametitle{Epipolar Constraint}
+
+    \begin{center}
+        \includegraphics[width=0.4\textwidth]{./images/epipolar_geometry.pdf}
+    \end{center}
+
+    Vector normal to the epipolar plane: $\mathbf{n} = \mathbf{t} \times \mathbf{x}_l$
+    \vspace{0.5cm}
+    Dot product of $\mathbf{n}$ and $\mathbf{x}_l$ (perpendicular vectors) is zero:
+    $$\boxed{\mathbf{x}_l \cdot (\mathbf{t} \times \mathbf{x}_l) = 0}$$
+\end{frame}
+
+% --- Slide 2: Epipolar Constraint (Matrix Form) ---
+\begin{frame}
+    \frametitle{Epipolar Constraint}
+    Writing the epipolar constraint in matrix form:
+    $$\mathbf{x}_l \cdot (\mathbf{t} \times \mathbf{x}_l) = 0$$
+    $$
+    \begin{bmatrix} x_l & y_l & z_l \end{bmatrix}
+    \begin{bmatrix}
+        t_y z_l - t_z y_l \\
+        t_z x_l - t_x z_l \\
+        t_x y_l - t_y x_l
+    \end{bmatrix} = 0 \quad \text{Cross-product definition}
+    $$
+    $$
+    \boxed{
+    \begin{bmatrix} x_l & y_l & z_l \end{bmatrix}
+    \underbrace{\begin{bmatrix}
+        0 & -t_z & t_y \\
+        t_z & 0 & -t_x \\
+        -t_y & t_x & 0
+    \end{bmatrix}}_{\mathbf{T}_{\times}}
+    \begin{bmatrix} x_l \\ y_l \\ z_l \end{bmatrix} = 0
+    } \quad \text{Matrix-vector form}
+    $$
+    $\mathbf{t}_{3\times1}$: Position of Right Camera in Left Camera's Frame
+    \\
+    $\mathbf{R}_{3\times3}$: Orientation of Left Camera in Right Camera's Frame
+    \vspace{0.2cm}
+    $$
+    \boxed{
+    \mathbf{x}_l = \mathbf{R} \mathbf{x}_r + \mathbf{t}
+    }
+    \quad
+    \begin{bmatrix} x_l \\ y_l \\ z_l \end{bmatrix} =
+    \begin{bmatrix}
+        r_{11} & r_{12} & r_{13} \\
+        r_{21} & r_{22} & r_{23} \\
+        r_{31} & r_{32} & r_{33}
+    \end{bmatrix}
+    \begin{bmatrix} x_r \\ y_r \\ z_r \end{bmatrix} +
+    \begin{bmatrix} t_x \\ t_y \\ t_z \end{bmatrix}
+    $$
+\end{frame}
+
+% --- Slide 3: Epipolar Constraint (Essential Matrix E) ---
+\begin{frame}
+    \frametitle{Epipolar Constraint}
+    Substituting into the epipolar constraint gives:
+    $$
+    \begin{bmatrix} x_l & y_l & z_l \end{bmatrix}
+    \left(
+    \begin{bmatrix}
+        0 & -t_z & t_y \\
+        t_z & 0 & -t_x \\
+        -t_y & t_x & 0
+    \end{bmatrix}
+    \begin{bmatrix}
+        r_{11} & r_{12} & r_{13} \\
+        r_{21} & r_{22} & r_{23} \\
+        r_{31} & r_{32} & r_{33}
+    \end{bmatrix}
+    \right)
+    \begin{bmatrix} x_r \\ y_r \\ z_r \end{bmatrix} = 0
+    $$
+    $$
+    \begin{bmatrix} x_l & y_l & z_l \end{bmatrix}
+    \underbrace{\begin{bmatrix}
+        e_{11} & e_{12} & e_{13} \\
+        e_{21} & e_{22} & e_{23} \\
+        e_{31} & e_{32} & e_{33}
+    \end{bmatrix}}_{\text{Essential Matrix } \mathbf{E}}
+    \begin{bmatrix} x_r \\ y_r \\ z_r \end{bmatrix} = 0
+    $$
+    $$
+    \boxed{\mathbf{E} = \mathbf{T}_{\times} \mathbf{R}}
+    $$
+    \footnotesize{[Longuet-Higgins 1981]}
+\end{frame}
+
+% --- Slide 4: Essential Matrix E Decomposition ---
+\begin{frame}
+    \frametitle{Essential Matrix $\mathbf{E}$: Decomposition}
+    $$
+    \boxed{\mathbf{E} = \mathbf{T}_{\times} \mathbf{R}}
+    $$
+    $$
+    \begin{bmatrix}
+        e_{11} & e_{12} & e_{13} \\
+        e_{21} & e_{22} & e_{23} \\
+        e_{31} & e_{32} & e_{33}
+    \end{bmatrix} =
+    \begin{bmatrix}
+        0 & -t_z & t_y \\
+        t_z & 0 & -t_x \\
+        -t_y & t_x & 0
+    \end{bmatrix}
+    \begin{bmatrix}
+        r_{11} & r_{12} & r_{13} \\
+        r_{21} & r_{22} & r_{23} \\
+        r_{31} & r_{32} & r_{33}
+    \end{bmatrix}
+    $$
+    Given that $\mathbf{T}_{\times}$ is a Skew-Symmetric matrix ($a_{ij} = -a_{ji}$) and $\mathbf{R}$ is an Orthonormal matrix, it is possible to ``decouple'' $\mathbf{T}_{\times}$ and $\mathbf{R}$ from their product using ``Singular Value Decomposition''.
+
+    \vspace{0.5cm}
+    Take Away: If $\mathbf{E}$ is known, we can calculate $\mathbf{t}$ and $\mathbf{R}$.
+\end{frame}
+
+
+
+
+% --- Slide 5: How do we find E? ---
+\begin{frame}
+    \frametitle{How do we find $\mathbf{E}$?}
+    Relates 3D position $(x_l, y_l, z_l)$ of scene point w.r.t left camera to its 3D position $(x_r, y_r, z_r)$ w.r.t. right camera
+    $$\boxed{\mathbf{x}_l^T \mathbf{E} \mathbf{x}_r = 0}$$
+    $$
+    \begin{bmatrix} x_l & y_l & z_l \end{bmatrix}
+    \underbrace{\begin{bmatrix}
+        e_{11} & e_{12} & e_{13} \\
+        e_{21} & e_{22} & e_{23} \\
+        e_{31} & e_{32} & e_{33}
+    \end{bmatrix}}_{\text{3x3 Essential Matrix}}
+    \begin{bmatrix} x_r \\ y_r \\ z_r \end{bmatrix} = 0
+    $$
+    3D position in left camera coordinates $\quad \uparrow \quad$ 3D position in right camera coordinates
+
+    \vspace{0.2cm}
+    Unfortunately, we don't have $\mathbf{x}_l$ and $\mathbf{x}_r$.
+    \vspace{0.2cm}
+    But we do know corresponding points in image coordinates.
+\end{frame}
+
+\begin{frame}
+    \frametitle{Incorporating the Image Coordinates}
+    Perspective projection equations for left camera:
+    \begin{align*}
+        u_l &= f_x^{(l)} \frac{x_l}{z_l} + o_x^{(l)} \quad & v_l &= f_y^{(l)} \frac{y_l}{z_l} + o_y^{(l)} \\
+        z_l u_l &= f_x^{(l)} x_l + z_l o_x^{(l)} \quad & z_l v_l &= f_y^{(l)} y_l + z_l o_y^{(l)}
+    \end{align*}
+
+    Representing in matrix form:
+    $$
+    z_l \begin{bmatrix} u_l \\ v_l \\ 1 \end{bmatrix} =
+    \begin{bmatrix}
+        z_l u_l \\
+        z_l v_l \\
+        z_l
+    \end{bmatrix} =
+    \begin{bmatrix}
+        f_x^{(l)} x_l + z_l o_x^{(l)} \\
+        f_y^{(l)} y_l + z_l o_y^{(l)} \\
+        z_l
+    \end{bmatrix} =
+    \underbrace{\begin{bmatrix}
+        f_x^{(l)} & 0 & o_x^{(l)} \\
+        0 & f_y^{(l)} & o_y^{(l)} \\
+        0 & 0 & 1
+    \end{bmatrix}}_{\text{Known Camera Matrix } \mathbf{K}_l}
+    \begin{bmatrix} x_l \\ y_l \\ z_l \end{bmatrix}
+    $$
+\end{frame}
+
+% --- Slide 6: Incorporating Image Coordinates (K) ---
+\begin{frame}
+    \frametitle{Incorporating the Image Coordinates}
+    \textbf{Left camera}
+    \vspace{0.2cm}
+    $$
+    z_l \begin{bmatrix} u_l \\ v_l \\ 1 \end{bmatrix} =
+    \underbrace{\begin{bmatrix}
+        f_x^{(l)} & 0 & o_x^{(l)} \\
+        0 & f_y^{(l)} & o_y^{(l)} \\
+        0 & 0 & 1
+    \end{bmatrix}}_{\mathbf{K}_l}
+    \begin{bmatrix} x_l \\ y_l \\ z_l \end{bmatrix}
+    \quad \mathbf{K}_l
+    $$
+    \vspace{0.2cm}
+    \textbf{Right camera}
+    \vspace{0.2cm}
+    $$
+    z_r \begin{bmatrix} u_r \\ v_r \\ 1 \end{bmatrix} =
+    \underbrace{\begin{bmatrix}
+        f_x^{(r)} & 0 & o_x^{(r)} \\
+        0 & f_y^{(r)} & o_y^{(r)} \\
+        0 & 0 & 1
+    \end{bmatrix}}_{\mathbf{K}_r}
+    \begin{bmatrix} x_r \\ y_r \\ z_r \end{bmatrix}
+    \quad \mathbf{K}_r
+    $$
+    \vspace{0.2cm}
+    $$
+    \boxed{
+    \mathbf{x}_l^T = \begin{bmatrix} u_l & v_l & 1 \end{bmatrix} z_l \mathbf{K}_l^{-T}
+    }
+    \quad
+    \boxed{
+    \mathbf{x}_r = \mathbf{K}_r^{-1} z_r \begin{bmatrix} u_r \\ v_r \\ 1 \end{bmatrix}
+    }
+    $$
+\end{frame}
+
+% --- Slide 7: Incorporating Image Coordinates (Substitution) ---
+\begin{frame}
+    \frametitle{Incorporating the Image Coordinates}
+    Epipolar constraint:
+    $$
+    \begin{bmatrix} x_l & y_l & z_l \end{bmatrix}
+    \begin{bmatrix}
+        e_{11} & e_{12} & e_{13} \\
+        e_{21} & e_{22} & e_{23} \\
+        e_{31} & e_{32} & e_{33}
+    \end{bmatrix}
+    \begin{bmatrix} x_r \\ y_r \\ z_r \end{bmatrix} = 0
+    $$
+
+    Rewriting in terms of image coordinates:
+    $$
+    \begin{bmatrix} u_l & v_l & 1 \end{bmatrix} \underbrace{z_l}_{\text{crossed out}} \mathbf{K}_l^{-T}
+    \begin{bmatrix}
+        e_{11} & e_{12} & e_{13} \\
+        e_{21} & e_{22} & e_{23} \\
+        e_{31} & e_{32} & e_{33}
+    \end{bmatrix}
+    \mathbf{K}_r^{-1} \underbrace{z_r}_{\text{crossed out}}
+    \begin{bmatrix} u_r \\ v_r \\ 1 \end{bmatrix} = 0
+    $$
+    $$
+    \boxed{z_l \neq 0}
+    \quad
+    \boxed{z_r \neq 0}
+    $$
+
+    (Final simplified form on a separate slide: $\mathbf{u}_l^T \mathbf{K}_l^{-T} \mathbf{E} \mathbf{K}_r^{-1} \mathbf{u}_r = 0$)
+\end{frame}
+
+% --- Slide 8: Fundamental Matrix F ---
+\begin{frame}
+    \frametitle{Fundamental Matrix $\mathbf{F}$}
+    Epipolar constraint:
+    $$
+    \begin{bmatrix} x_l & y_l & z_l \end{bmatrix}
+    \begin{bmatrix}
+        e_{11} & e_{12} & e_{13} \\
+        e_{21} & e_{22} & e_{23} \\
+        e_{31} & e_{32} & e_{33}
+    \end{bmatrix}
+    \begin{bmatrix} x_r \\ y_r \\ z_r \end{bmatrix} = 0
+    $$
+    Rewriting in terms of image coordinates:
+    $$
+    \begin{bmatrix} u_l & v_l & 1 \end{bmatrix}
+    \underbrace{\begin{bmatrix}
+        f_{11} & f_{12} & f_{13} \\
+        f_{21} & f_{22} & f_{23} \\
+        f_{31} & f_{32} & f_{33}
+    \end{bmatrix}}_{\text{Fundamental Matrix } \mathbf{F}}
+    \begin{bmatrix} u_r \\ v_r \\ 1 \end{bmatrix} = 0
+    $$
+    $$
+    \boxed{\mathbf{E} = \mathbf{K}_l^T \mathbf{F} \mathbf{K}_r}
+    \quad
+    \boxed{\mathbf{E} = \mathbf{T}_{\times} \mathbf{R}}
+    $$
+    \footnotesize{[Fagueras 1992, Luong 1992]}
+\end{frame}
+
 
 \begin{frame}
     \frametitle{Matríz fundamental}
